apps/virtue-rebirth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virtue-rebirth
  namespace: default
  labels:
    app: virtue-rebirth
spec:
  selector:
    app: virtue-rebirth
  ports:
    - name: http
      port: 80
      targetPort: http
