apps/virtue-rebirth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtue-rebirth
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: https://virtue.aws.shdkej.com$request_uri
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - virtue.oracle.shdkej.com
      secretName: virtue-rebirth-tls
  rules:
    - host: virtue.oracle.shdkej.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: virtue-rebirth
                port:
                  number: 80
